--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,22 +1,9 @@
 ---
-import { Picture } from "astro:assets";
-import heroImage from "assets/hero.png";
-import Link from "@components/ui/link.astro";
-import { Icon } from "astro-icon";
+import VideoComponent from "@components/video/VideoComponent";
 ---
 
 <main
   class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
-  <div class="py-6 md:order-1 hidden md:block">
-    <Picture
-      src={heroImage}
-      alt="Astronaut in the air"
-      widths={[200, 400, 600]}
-      sizes="(max-width: 800px) 100vw, 620px"
-      loading="eager"
-      format="avif"
-    />
-  </div>
   <div>
     <h1
       class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
@@ -27,5 +14,17 @@ import { Icon } from "astro-icon";
       pages.<wbr /> Built with Astro.build and TailwindCSS. You can quickly
       create any website with this starter.
     </p>
+  </div>
+  <div class="py-6 md:order-1  md:block">
+    <VideoComponent
+                client:load
+                src="https://img.freepik.com/foto-gratis/resumen-bombilla-creativa-sobre-fondo-azul-brillante-ia-generativa_188544-8090.jpg?w=1060&t=st=1708449248~exp=1708449848~hmac=2f4eb21698de6951569a64a7abdd6a105bbc6b84ba083be91f0de6f367b49896"
+                height={370}
+                width={700}
+                title="Accountability that works for you"
+                video_id="Dam_JVQlk3M"
+                video_width="w-[700px]"
+                video_height="h-[370px]"
+              />
   </div>
 </main>
