--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -6,19 +6,12 @@ import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 
 const menuitems = [
   {
-    title: "Pricing",
-    path: "/pricing",
-  },
-  {
-    title: "About",
+    title: "Sobre nosotros",
     path: "/about",
   },
+  ,
   {
-    title: "Blog",
-    path: "/blog",
-  },
-  {
-    title: "Contact",
+    title: "Contactanos",
     path: "/contact",
   },
 ];
@@ -68,13 +61,11 @@ const menuitems = [
             ))
           }
         </ul>
-        <div class="lg:hidden flex items-center mt-3 gap-4">
-        </div>
+        <div class="lg:hidden flex items-center mt-3 gap-4"></div>
       </MenuItems>
     </Astronav>
     <div>
-      <div class="hidden lg:flex items-center gap-4">
-      </div>
+      <div class="hidden lg:flex items-center gap-4"></div>
     </div>
   </header>
 </Container>
