--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,18 +14,22 @@ const publishedTeamMembers = await getCollection("team", ({ data }) => {
 <Layout title="About">
   <Container>
     <Sectionhead>
-      <Fragment slot="title">About</Fragment>
-      <Fragment slot="desc">We are a small passionate team.</Fragment>
+      <Fragment slot="title">Sobre nosotros</Fragment>
+      <Fragment slot="desc">Somos un pequeño equipo apasionado.</Fragment>
     </Sectionhead>
-
     <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
       <h2 class="font-bold text-3xl text-gray-800">
-        Empowering the world with Astro.
+        Se dice que... "Cuando el conocimiento se comparte, se multiplica"
       </h2>
       <p class="text-lg leading-relaxed text-slate-500">
-        We're a multi-cultural team from around the world! We come from diverse
-        backgrounds, bringing different personalities, experiences and skills to
-        the job. This is what makes our team so special.
+        La misión y visión de nuestra familia es integrar conocimientos y
+        tradiciones ancestrales en los campos de la bioconstrucción, la medicina
+        natural y la agricultura orgánica, trabajando sostenibilidad económica
+        en armonía con la madre naturaleza y compartiendo nuestros saberes para
+        innovar, motivar y mejorar nuestro mundo. <br />
+        Nuestra filosofía está basada en una regla de oro "Compartir", y eso hacemos
+        con nuestros saberes, lo compartimos para ayudar a las personas a crear una
+        mejor vida y futuro.
       </p>
     </div>
     <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
