--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -10,14 +10,19 @@ import { YouTube } from "astro-lazy-youtube-embed";
       Rio Bosque Magico Chazuta
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      Astroship is a starter template for startups, marketing websites & landing
-      pages.
+      Río Boque Mágico en Chazuta nació hace más de 15 años.
       <wbr />
-      Built with Astro.build and TailwindCSS. You can quickly
-      create any website with this starter.
+      Es un proyecto independiente y familiar que se dedica al ecoturismo sostenible,
+      la agricultura orgánica de cacao, el cultivo de plantas medicinales nativas
+      y la producción de chocolates artesanales.
     </p>
   </div>
-  <div class="py-6 md:order-1  md:block w-[90%]">
-    <YouTube class="rounded-2xl" id="videoIntro" videoId="Dam_JVQlk3M" title="Welcome to RioBosqueMagico" />
+  <div class="py-6 md:order-1 md:block w-[90%]">
+    <YouTube
+      class="rounded-2xl"
+      id="videoIntro"
+      videoId="Dam_JVQlk3M"
+      title="Welcome to RioBosqueMagico"
+    />
   </div>
 </main>
