--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,16 +9,18 @@ import { Icon } from "astro-icon";
 <Layout title="Contact">
   <Container>
     <Sectionhead>
-      <Fragment slot="title">Contact</Fragment>
-      <Fragment slot="desc">We are a here to help.</Fragment>
+      <Fragment slot="title">Contactanos</Fragment>
+      <Fragment slot="desc">Estamos para ayudarte.</Fragment>
     </Sectionhead>
 
     <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
       <div>
-        <h2 class="font-medium text-2xl text-gray-800">Contact Astroship</h2>
+        <h2 class="font-medium text-2xl text-gray-800">
+          Contacta a RioBosqueMagico
+        </h2>
         <p class="text-lg leading-relaxed text-slate-500 mt-3">
-          Have something to say? We are here to help. Fill up the form or send
-          email or call phone.
+          Estamos aquí para ayudar. Rellene el formulario o envíe un correo
+          electrónico o llame al teléfono.
         </p>
         <div class="mt-5">
           <div class="flex items-center mt-2 space-x-2 text-gray-600">
